--- a/public/starter-code/index.html
+++ b/public/starter-code/index.html
@@ -5,208 +5,231 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Prologue by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/styles.css" />
-		<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Titan+One&display=swap" rel="stylesheet">
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-			<div id="header">
+<head>
+	<title>Ahmed Abu Samaan</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/styles.css" />
+	<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Titan+One&display=swap" rel="stylesheet">
+</head>
 
-				<div class="top">
+<body class="is-preload">
 
-					<!-- Logo -->
-						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Ahmed Abu Samaan</h1>
-							<p>Software Engineer</p>
-						</div>
+	<!-- Header -->
+	<div id="header">
 
-					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li><a href="#top" id="top-link"><span class="icon fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon fa-th">My Skills</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon fa-user">Personal pitch</span></a></li>
-								<li><a href="#contact" id="contact-link"><span class="icon fa-envelope">Contact</span></a></li>
-							</ul>
-						</nav>
+		<div class="top">
 
-				</div>
+			<!-- Logo -->
+			<div id="logo">
+				<span class="image avatar48"><img
+						src="https://scontent.famm6-1.fna.fbcdn.net/v/t1.0-9/s960x960/58382963_2432634543437720_6852003018003447808_o.jpg?_nc_cat=105&_nc_sid=85a577&_nc_ohc=BU6Mi2IKgtEAX-PyYWj&_nc_ht=scontent.famm6-1.fna&_nc_tp=7&oh=62a3aead1bc655bc68491ecdcedbc28b&oe=5EAE4838"
+						alt="" /></span>
+				<h1 id="title">Ahmed Abu Samaan</h1>
+				<p>Software Engineer</p>
+			</div>
 
-				<div class="bottom">
+			<!-- Nav -->
+			<nav id="nav">
+				<ul>
+					<li><a href="#top" id="top-link"><span class="icon fa-home">Intro</span></a></li>
+					<li><a href="#portfolio" id="portfolio-link"><span class="icon fa-th">My Skills</span></a></li>
+					<li><a href="#about" id="about-link"><span class="icon fa-user">Personal pitch</span></a></li>
+					<li><a href="#contact" id="contact-link"><span class="icon fa-envelope">Contact</span></a></li>
+				</ul>
+			</nav>
 
-					<!-- Social Icons -->
-						<ul class="icons">
-							<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
-							<li><a href="https://www.facebook.com/ahmed.abusamaan" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="https://github.com/Ahmed199764" class="icon fa-github"><span class="label">Github</span></a></li>
-							<!-- <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+		</div>
+
+		<div class="bottom">
+
+			<!-- Social Icons -->
+			<ul class="icons">
+				<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
+				<li><a href="https://www.facebook.com/ahmed.abusamaan" class="icon fa-facebook"><span
+							class="label">Facebook</span></a></li>
+				<li><a href="https://github.com/Ahmed199764" class="icon fa-github"><span
+							class="label">Github</span></a></li>
+				<!-- <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li> -->
-						</ul>
+			</ul>
 
+		</div>
+
+	</div>
+
+	<!-- Main -->
+	<div id="main">
+		<!-- Intro -->
+		<section id="top" class="one dark cover" >
+			<div class="container"> Web Developer student at LTUC.
+				<header>
+					<h2 class="alt">Hi! I'm a <strong>Web Developer</strong> student at LTUC.</h2>
+					<p>My dream is to be big and effective in Techonlogy world<br />
+						I Belive some day i will be a great coder</p>
+				</header>
+
+
+				<footer>
+					<a href="https://www.facebook.com/ahmed.abusamaan" class="button scrolly">Connect me on facebook</a>
+				</footer>
+
+			</div>
+		</section>
+
+		<!-- Portfolio -->
+		<section id="portfolio" class="two">
+			<div class="container">
+
+				<header>
+					<h2>My Skills</h2>
+				</header>
+
+				<p>I like anything related to UI(CSS) and i can waste my whole day working on it to improve my skills.
+					<br />but also I am working to improve my background skills.
+					<br />
+					<a href="https://github.com/Ahmed199764">Github</a>
+					<br />
+					<a href="https://www.facebook.com/ahmed.abusamaan">FaceBook</a>
+					<br />
+					<a href="https://www.linkedin.com/in/ahmed-abu-samaan-6424831a1/">LinkedIn</a>
+					<br />
+					Some of my Repos :-
+				</p>
+
+				<div class="row">
+					<div class="col-4 col-12-mobile">
+						<article class="item">
+							<a href="https://github.com/Ahmed199764/cookie-stand" class="image fit"><img
+									src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
+									alt="" /></a>
+							<header>
+								<h3>Cookie Repo</h3>
+							</header>
+						</article>
+						<article class="item">
+							<a href="https://github.com/Ahmed199764/portfolio" class="image fit"><img
+									src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=752&q=80"
+									alt="" /></a>
+							<header>
+								<h3>portfolio Repo</h3>
+							</header>
+						</article>
+					</div>
+					<div class="col-4 col-12-mobile">
+						<article class="item">
+							<a href="https://github.com/Ahmed199764/lab-01" class="image fit"><img
+									src="https://images.unsplash.com/photo-1557853197-aefb550b6fdc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80"
+									alt="" /></a>
+							<header>
+								<h3>Grid and Felx Repo</h3>
+							</header>
+						</article>
+						<article class="item">
+							<a href="https://github.com/Ahmed199764/reading-notes" class="image fit"><img
+									src="https://images.unsplash.com/photo-1534972195531-d756b9bfa9f2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
+									alt="" /></a>
+							<header>
+								<h3>Reading notes Repo</h3>
+							</header>
+						</article>
+					</div>
+					<div class="col-4 col-12-mobile">
+						<article class="item">
+							<a href="https://github.com/Ahmed199764/lab-02-repository" class="image fit"><img
+									src="https://images.unsplash.com/photo-1562813733-b31f71025d54?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=749&q=80"
+									alt="" /></a>
+							<header>
+								<h3>Gallery Repo</h3>
+							</header>
+						</article>
+						<article class="item">
+							<a href="https://github.com/Ahmed199764/bus-mall" class="image fit"><img
+									src="https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
+									alt="" /></a>
+							<header>
+								<h3>Bus mall Repo</h3>
+							</header>
+						</article>
+					</div>
 				</div>
 
 			</div>
+		</section>
 
-		<!-- Main -->
-			<div id="main">
+		<!-- About Me -->
+		<section id="about" class="three">
+			<div class="container">
 
-				<!-- Intro -->
-					<section id="top" class="one dark cover">
-						<div class="container"> Web Developer student at LTUC.
+				<header>
+					<h2>Personal pitch</h2>
+				</header>
 
-							<header>
-								<h2 class="alt">Hi! I'm a <strong>Web Developer</strong> student at  LTUC.</h2>
-								<p>My dream is to be big and effective in Techonlogy world<br />
-								I Belive some day i will be a great coder</p>
-							</header>
+				<a href="#" class="image featured"><img
+						src="https://scontent.famm7-1.fna.fbcdn.net/v/t1.0-9/s960x960/58382963_2432634543437720_6852003018003447808_o.jpg?_nc_cat=105&_nc_sid=85a577&_nc_eui2=AeEhSLf6F0Inrtu8zbV1squSv6EnMzGAYii9-R7fw4p_JJcyVunVIlgE2ta0HaKbWMBGVpNJa-Mk6jU0ge2-VJ4nSqFXAhycqwU32Hh8onIz2w&_nc_ohc=sSKqEas8WCMAX98oEyC&_nc_ht=scontent.famm7-1.fna&_nc_tp=7&oh=243995cc8168338a14d192d9045d7561&oe=5EAA53B8"
+						alt="AhmedAbuSamaan" /></a>
 
-							<footer>
-								<a href="https://www.facebook.com/ahmed.abusamaan" class="button scrolly">Connect me on facebook</a>
-							</footer>
-
-						</div>
-					</section>
-
-				<!-- Portfolio -->
-					<section id="portfolio" class="two">
-						<div class="container">
-
-							<header>
-								<h2>My Skills</h2>
-							</header>
-
-							<p>I like anything related to UI(CSS) and i can waste my whole day working on it to improve my skills.
-								<br/>but also I am working to improve my background skills.
-								<br/>
-								<a href="https://github.com/Ahmed199764">Github</a>
-								<br/>
-								<a href="https://www.facebook.com/ahmed.abusamaan">FaceBook</a>
-								<br/>
-								<a href="https://www.linkedin.com/in/ahmed-abu-samaan-6424831a1/">LinkedIn</a>
-								<br/>
-								Some of my Repos :-
-							</p>
-
-							<div class="row">
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="https://github.com/Ahmed199764/cookie-stand" class="image fit"><img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="" /></a>
-										<header>
-											<h3>Cookie Repo</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="https://github.com/Ahmed199764/portfolio" class="image fit"><img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=752&q=80" alt="" /></a>
-										<header>
-											<h3>portfolio Repo</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="https://github.com/Ahmed199764/lab-01" class="image fit"><img src="https://images.unsplash.com/photo-1557853197-aefb550b6fdc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="" /></a>
-										<header>
-											<h3>Grid and Felx Repo</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="https://github.com/Ahmed199764/reading-notes" class="image fit"><img src="https://images.unsplash.com/photo-1534972195531-d756b9bfa9f2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="" /></a>
-										<header>
-											<h3>Reading notes Repo</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="https://github.com/Ahmed199764/lab-02-repository" class="image fit"><img src="https://images.unsplash.com/photo-1562813733-b31f71025d54?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=749&q=80" alt="" /></a>
-										<header>
-											<h3>Gallery Repo</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="https://github.com/Ahmed199764/bus-mall" class="image fit"><img src="https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" alt="" /></a>
-										<header>
-											<h3>Bus mall Repo</h3>
-										</header>
-									</article>
-								</div>
-							</div>
-
-						</div>
-					</section>
-
-				<!-- About Me -->
-					<section id="about" class="three">
-						<div class="container">
-
-							<header>
-								<h2>Personal pitch</h2>
-							</header>
-
-							<a href="#" class="image featured"><img src="https://scontent.famm7-1.fna.fbcdn.net/v/t1.0-9/s960x960/58382963_2432634543437720_6852003018003447808_o.jpg?_nc_cat=105&_nc_sid=85a577&_nc_eui2=AeEhSLf6F0Inrtu8zbV1squSv6EnMzGAYii9-R7fw4p_JJcyVunVIlgE2ta0HaKbWMBGVpNJa-Mk6jU0ge2-VJ4nSqFXAhycqwU32Hh8onIz2w&_nc_ohc=sSKqEas8WCMAX98oEyC&_nc_ht=scontent.famm7-1.fna&_nc_tp=7&oh=243995cc8168338a14d192d9045d7561&oe=5EAA53B8" alt="AhmedAbuSamaan" /></a>
-
-							<p>I started to like Information Technology when I was student at school, When I graduate
-								from high school and went to the University I wanted to choose a filed it was really
-								confused, I asked a lot and wasted good time trying to find good field then I said I will go
-								IT field because I like it and now time everything depends on IT and knowledge.
-								I graduated from the University of Jordan and now I am training at ITCU Collage
-								Advance coding, after it I want to be a professional coder.</p>
-
-						</div>
-					</section>
-
-				<!-- Contact -->
-					<section id="contact" class="four">
-						<div class="container">
-
-							<header>
-								<h2>Contact</h2>
-							</header>
-
-							<p>Feel free to send me any message boxs you like</p>
-
-							<form method="post" action="#">
-								<div class="row">
-									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Please insert your name" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Please insert your Email" /></div>
-									<div class="col-12">
-										<textarea name="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<input type="submit" value="Send Message" />
-									</div>
-								</div>
-							</form>
-
-						</div>
-					</section>
+				<p>I started to like Information Technology when I was student at school, When I graduate
+					from high school and went to the University I wanted to choose a filed it was really
+					confused, I asked a lot and wasted good time trying to find good field then I said I will go
+					IT field because I like it and now time everything depends on IT and knowledge.
+					I graduated from the University of Jordan and now I am training at ITCU Collage
+					Advance coding, after it I want to be a professional coder.</p>
 
 			</div>
+		</section>
 
-		<!-- Footer -->
-			<div id="footer">
+		<!-- Contact -->
+		<section id="contact" class="four">
+			<div class="container">
 
-				<!-- Copyright -->
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+				<header>
+					<h2>Contact</h2>
+				</header>
+
+				<p>Feel free to send me any message boxs you like</p>
+
+				<form method="post" action="#">
+					<div class="row">
+						<div class="col-6 col-12-mobile"><input type="text" name="name"
+								placeholder="Please insert your name" /></div>
+						<div class="col-6 col-12-mobile"><input type="text" name="email"
+								placeholder="Please insert your Email" /></div>
+						<div class="col-12">
+							<textarea name="message" placeholder="Message"></textarea>
+						</div>
+						<div class="col-12">
+							<input type="submit" value="Send Message" />
+						</div>
+					</div>
+				</form>
 
 			</div>
+		</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	</div>
 
-	</body>
+	<!-- Footer -->
+	<div id="footer">
+
+		<!-- Copyright -->
+		<ul class="copyright">
+			<li>&copy; Untitled. All rights reserved.</li>
+			<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+		</ul>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+<script src="public/starter-code/app.js"></script>
+</body>
+
 </html>
