--- a/public/starter-code/index.html
+++ b/public/starter-code/index.html
@@ -62,7 +62,7 @@
 	<!-- Main -->
 	<div id="main">
 		<!-- Intro -->
-		<section id="top" class="one dark cover" >
+		<section id="top" class="background" >
 			<div class="container"> Web Developer student at LTUC.
 				<header>
 					<h2 class="alt">Hi! I'm a <strong>Web Developer</strong> student at LTUC.</h2>
